feat: adjust build script with –no-optimize, set default form values for AddRecipe, and ignore build/ folder

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "scripts": {
         "start": "parcel index.html",
-        "build": "parcel build index.html"
+        "build": "parcel build index.html --dist-dir ./build --no-optimize"
     },
     "repository": {
         "type": "git",
